# audiomesh

./: .gitattributes  Cargo.toml  README.md  todo.org
audiomesh/: .gitattributes  Cargo.toml  Rocket.toml  requests
audiomesh/graphcontrol/: build.sh  elm.js  elm.json  graph.html  index.html  live.sh
audiomesh/graphcontrol/elm-stuff/0.19.1/: Api.elmi  Api.elmo  DrawGraph.elmi  DrawGraph.elmo  EdgeControl.elmi  EdgeControl.elmo  Main.elmi  Main.elmo  OutputIndices.elmi  OutputIndices.elmo  Parameters.elmi  Parameters.elmo  ProcessGraph.elmi  ProcessGraph.elmo  Utils.elmi  Utils.elmo
audiomesh/graphcontrol/src/: Api.elm  CommonElements.elm  DrawGraph.elm  EdgeControl.elm  Main.elm  Matrix.elm  Midi.elm  OutputIndices.elm  Parameters.elm  ProcessGraph.elm  Utils.elm
audiomesh/src/: lag.rs  main.rs
graphugen/: Cargo.toml  Makefile  bindings.h  test.scd  wrap.cpp  wrap.sc
graphugen/src/: lib.rs
graphwasm/: Cargo.toml  build_wasm.sh  index.html
graphwasm/js/: audio.js  worklet.js
graphwasm/src/: lib.rs
graphwasm/wasm/: graphwasm.wasm
processgraph/: Cargo.toml
processgraph/src/: compenv.rs  filters.rs  integrator.rs  lag.rs  lib.rs  numerical.rs  process.rs  processspec.rs  tapdelay.rs
src/: main.rs
src/ugens/: mod.rs
