[workspace]

members = [
    "processgraph",
    "graphugen",
    "audiomesh",
    "graphwasm",
]

# [package]
# name = "audiomesh"
# version = "0.1.0"
# authors = ["lucdoebereiner <luc.doebereiner@gmail.com>"]
# edition = "2018"


# [[bin]]
# name = "audiomesh"
# path = "src/main.rs"

# [lib]
# name = "meshlib"
# crate-type = ["cdylib", "staticlib"]
# path = "src/lib.rs"

# [lib]
# name = "meshwasm"
# crate-type = ["cdylib"]
# path = "src/libwasm.rs"


# [dependencies]
# lazy_static = "1.2.0"
# petgraph = "0.5.0"
# jack = "*"

# [dependencies.rand]
# version = "0.7"
# features = ["small_rng"]
