[package]
name = "audiomesh"
version = "0.1.0"
authors = ["lucdoebereiner <luc.doebereiner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "*"
processgraph = { path = "../processgraph" }
petgraph = { version = "*", features = ["serde-1"] }
serde_json = { version = "1.0" }
rocket = "0.4.4"
crossbeam-channel = "*"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]