[package]
name = "audiomesh"
version = "0.3.0"
authors = ["lucdoebereiner <luc.doebereiner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "*"
processgraph = { path = "../processgraph" }
petgraph = { version = "*", features = ["serde-1"] }
serde_json = { version = "1.0" }
rocket = "*"
crossbeam-channel = "*"
rocket_cors = "*"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]