[package]
name = "audiomesh"
version = "0.4.0"
authors = ["lucdoebereiner <luc.doebereiner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "*"
processgraph = { path = "../processgraph" }
petgraph = { version = "0.5.1", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
crossbeam-channel = "*"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
# rocket_cors = "0.5.2"
futures = "0.3.15"
lazy_static = "1.4.0"
rand = "0.8.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]


# [dependencies.rocket_contrib]
# version = "*"
# default-features = false
# features = ["json"]