[package]
name = "processgraph"
version = "0.1.0"
authors = ["lucdoebereiner <luc.doebereiner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.5.1", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dependencies.rand]
version = "0.7"
features = ["small_rng"]
